# Alter-Jira

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docker/app/: Dockerfile
src/: main.py
src/api/: person.py  task.py
src/config/: db.py  settings.py
src/models/: person.py  task.py
src/services/: base_crud.py  person.py  task.py
src/structs/: task.py
tests/: conftest.py
tests/test_api/: fixture.py  person.py  tasks.py  test_person.py  test_tasks.py
