[tool.poetry]
name = "alter-jira"
version = "0.1.0"
description = ""
authors = ["Mihail Samofalov <misasamofalov611@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
sqlalchemy-utils = "^0.41.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


